--- a/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
@@ -20,7 +20,11 @@
 	<script src="~/Scripts/CalendarWidget/Slider/jquery.animate-enhanced.min.js"></script>
 	<script src="~/Scripts/CalendarWidget/Slider/jquery.easing.1.3.js"></script>
 	<script src="~/Scripts/CalendarWidget/Slider/jquery.superslides.min.js"></script>
+
 	<script src="~/Scripts/JSModels/KKEventModel.js"></script>
+	<script src="~/Scripts/JSModels/KKDateModel.js"></script>
+	<script src="~/Scripts/JSModels/KKEventDateModel.js"></script>
+
 	<script src="~/Scripts/JSViewModels/CalendarViewModel.js"></script>
 	<script src="~/Scripts/Helpers/EventColorHelper.js"></script>
 	<script src="~/Scripts/Helpers/EventTreeBuilder.js"></script>
