--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
@@ -137,7 +137,7 @@
 			<div>20<span class="small-minutes">00</span></div>
 			<div style="position: absolute; right: 0; width: 26px;"><span>21</span><span class="small-minutes">00</span></div>
 		</div>
-		<div style="width: 100%; height: 2px; border-top: 1px solid rgb(192,192,192); border-bottom: 1px solid rgb(244,244,244); background: rgba(0,0,0,.1);"></div>
+		<div style="width: 100%; height: 2px;"></div>
 		<div class="table-details-body">
 			<div class="details-day-cell hour-cell-7">
 				<div class="details-hour-line"></div>
@@ -193,8 +193,8 @@
 
 			<div class="details-day-cell hour-cell-20">
 				<div class="details-hour-line"></div>
+				<div class="details-hour-line-21"></div>
 			</div>
-
 		</div>
 
 	</div>
