--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -1,4 +1,9 @@
-﻿html {
+﻿/*background:rgb(225, 219, 211);*/
+/*background:rgb(215, 207, 196);*/
+/*color:rgb(255, 253, 247);*/
+/*border:1px solid rgb(255, 253, 240);*/
+
+html {
 	padding: 0px;
 	margin: 0px;
 }
@@ -879,8 +884,8 @@ background:rgb(115, 233, 162);
 	/*border-top: 1px solid rgb(250, 250, 250);
 	border-bottom: 1px solid rgb(224, 224, 224);*/
 	border-top: 1px solid whitesmoke;
-	padding-top:100px;
-	padding-bottom:100px;
+	padding-top: 100px;
+	padding-bottom: 100px;
 }
 
 #endDateValidationErrorMsg {
@@ -1137,22 +1142,23 @@ wydarzenia-tab {
 }
 
 #detailsEventBlockList {
-margin-top:20px;
+	width: 90%;
 }
 
 #calendarDayDetailsTable {
 	width: 98%;
 	color: gray;
 	position: relative;
-	border:1px solid white;
-	margin:0 auto;
+	border: 1px solid rgb(255, 253, 240);
+	margin: 0 auto;
 }
 
 	#calendarDayDetailsTable .table-details-head {
 		overflow: hidden;
 		text-align: left;
-		background: rgba(103, 84, 84, 0.72);
-		color: rgb(246, 246, 246);
+		background: rgb(215, 207, 196);
+		color: rgb(255, 253, 247);
+		padding-top: 20px;
 	}
 
 		#calendarDayDetailsTable .table-details-head div {
@@ -1161,10 +1167,10 @@ margin-top:20px;
 		}
 
 	#calendarDayDetailsTable .table-details-body {
-		background:rgba(252, 252, 252, 0.9); 
-		/*background: rgba(78,78,78,.6);*/
+		background: rgba(252, 252, 252, 0.9);
 		padding-top: 4px;
-		padding-bottom:4px;
+		padding-bottom: 4px;
+		border: 2px solid white;
 	}
 
 		#calendarDayDetailsTable .table-details-body .details-day-cell {
@@ -1189,12 +1195,12 @@ margin-top:20px;
 	background: rgba(0, 0, 0, 0.03);
 	/*border-top:1px solid rgb(250, 250, 250);
 	border-bottom:1px solid rgb(224,224,224);*/
-	margin-top:60px;
+	margin-top: 60px;
 	text-align: center;
 	margin-bottom: 20px;
 	border-top: 1px solid whitesmoke;
-	padding-bottom:100px;
-	padding-top:100px;
+	padding-bottom: 100px;
+	padding-top: 100px;
 }
 
 .current-month-name-calendar {
@@ -1219,17 +1225,17 @@ margin-top:20px;
 
 .details-hour-line {
 	position: absolute;
-	background: rgb(203, 203, 203);
+	background: rgb(225, 225, 225);
 	height: 100%;
 	width: 1px;
 }
 
 .details-hour-line-21 {
 	position: absolute;
-	background: rgb(203, 203, 203);
+	background: rgb(225, 225, 225);
 	height: 100%;
 	width: 1px;
-	right:0px;
+	right: 0px;
 }
 
 #logoutForm {
@@ -1570,7 +1576,7 @@ legend {
 	border-bottom: 1px solid rgb(223, 223, 223);
 	border-right: 1px solid rgb(223, 223, 223);
 	overflow: hidden;
-	text-align:left;
+	text-align: left;
 }
 
 .event-block-info-footer {
@@ -1584,6 +1590,12 @@ legend {
 
 .event-block-container {
 	display: inline-block;
+	vertical-align: top;
+}
+
+.details-event-block-container {
+	float: left;
+	margin-left: 2px;
 	vertical-align: top;
 }
 
@@ -1636,7 +1648,7 @@ legend {
 	line-height: 1;
 	/*background: rgb(198, 183, 183);
 	color: white;*/
-	color:rgb(106, 106, 106);
+	color: rgb(106, 106, 106);
 	margin-bottom: 10px;
 	padding: 4px 4px;
 }
@@ -1646,7 +1658,7 @@ legend {
 	line-height: 1;
 	/*background: rgb(198, 183, 183);
 	color: white;*/
-	color:rgb(106, 106, 106);
+	color: rgb(106, 106, 106);
 	margin-bottom: 10px;
 	padding: 4px 4px;
 }
@@ -1656,7 +1668,7 @@ legend {
 	line-height: 1;
 	/*background: rgb(198, 183, 183);*/
 	/*color: white;*/
-	color:rgb(106, 106, 106);
+	color: rgb(106, 106, 106);
 	padding: 4px 4px;
 }
 
@@ -1665,5 +1677,5 @@ legend {
 }
 
 .event-block-info-addedby {
-text-align:left;
+	text-align: left;
 }
