--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
@@ -113,11 +113,13 @@
 <div class="dark-background-div">
 	<span>/Grafik dnia/</span>
 </div>
-<div style="font-size:2em;">
-<span style="font-size: .8em; margin-left: 6px;	color: rgb(207, 157, 157);">wydarzenia z dnia: </span>
+<div style="font-size:2em; padding:20px;">
+<span>
+	<span style="font-size: .8em; margin-left: 6px; color: rgb(171, 157, 138);">wydarzenia z dnia: </span>
 	<span data-bind="text: $root.detailsPageDisplayDate.day()" style="color: rgb(228, 138, 138);"></span>
 	<span data-bind="text: $root.detailsPageDisplayDate.getMonthName()" style="color: rgb(228, 138, 138);"></span>
 	<span data-bind="text: $root.detailsPageDisplayDate.year()" style="color: rgb(228, 138, 138); font-size: .8em;"></span>
+</span>
 </div>
 	<div id="calendarDayDetailsTable">
 		<div class="table-details-head">
