--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventSummary.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventSummary.cshtml
@@ -1,9 +1,9 @@
 ﻿<section id="detailsEventBlockList">
-	<div style="overflow: hidden; width: 98%; margin: 0 auto; background: rgb(215, 207, 196); padding: 2px 0; border: 1px solid rgb(255, 253, 247);" data-bind="foreach: detailsPageDayEvents()">
+	<div style="overflow: hidden; width: 98%; border-top: none; background: rgb(215, 207, 196); margin: 0 auto;" data-bind="foreach: detailsPageDayEvents()">
 		<div class="event-block-container">
 		<span style="display:none;" class="hidden-event-id" data-bind="text: id"></span>
-			<div class="event-block" style="box-shadow:none !important;">
-				<div data-bind="style: { color: kind.headerColor, background: 'rgb(130,130,130)', border: '1px solid rgb(221, 221, 221)', padding: '10px', marginBottom: '10px' }">
+			<div class="event-block" data-bind="click: function () { $root.showEventDetailsOnEventBlockClick( $element ) }">
+				<div data-bind="style: { color: kind.headerColor, background: 'rgb(184, 168, 137)', border: '1px solid rgb(223, 209, 192)', width: '50%', boxShadow:'inset 2px 2px 10px -1px rgb(143, 125, 107)', padding: '10px', marginBottom: '10px' }">
 					<span data-bind="text: kind.name"></span>
 				</div>
 				<div class="event-block-content">
@@ -15,7 +15,6 @@
 					</div>
 				</div>
 				<div class="event-block-footer">
-					<div class="details-eventblock-show-link link" data-bind="click: function () { $root.showEventDetailsOnEventBlockClick($element) }"><span>pokaż</span></div>
 				</div>
 			</div>
 			@Html.Partial("_EventInfo")
