--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyAllSelectedEventsList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyAllSelectedEventsList.cshtml
@@ -1,16 +1,16 @@
 ﻿<div id="lobbyPageAllEventsListContainer" style="display: none;">
 	<div class="title-header">
-		Wybrane wydarzenia:
+		/Wybrane wydarzenia/
 	</div>
 	<div data-bind="foreach: $root.lobbyPageAllSelectedEvents" style="position: relative; left: 1px;">
-		<div data-bind="if: startDate.javascriptStartDate <= $root.todayDate.javascriptStartDate">
+		<div data-bind="if: startDate.javaScriptStartDate <= $root.todayDate.javaScriptStartDate">
 			<div style="display: inline-block; width: 300px; margin-bottom: 2px; padding: 5px; vertical-align: top; background: rgb(209,209,209); color: white;" data-bind="	text: name"></div>
 			<div style="display: inline-block; padding: 5px; background: rgb(180,180,180);" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
 			<div style="display: inline-block; color: white; padding: 5px; background: rgb(209,209,209);" data-bind="text: startDate.displayFullDate()"></div>
 			<div style="display: inline-block; color: white; padding: 5px; background: rgb(209,209,209);" data-bind="text: startDate.displayFullTime()"></div>
 		</div>
 
-		<div data-bind="if: startDate.javascriptStartDate > $root.todayDate.javascriptStartDate">
+		<div data-bind="if: startDate.javaScriptStartDate > $root.todayDate.javaScriptStartDate">
 			<div style="display: inline-block; width: 300px; margin-bottom: 2px; padding: 5px; vertical-align: top; background: rgb(173, 151, 151); color: white;" data-bind="text: name"></div>
 			<div style="display: inline-block; padding: 5px; background: rgb(130,130,130);" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
 			<div style="display: inline-block; color: white; padding: 5px; background: rgb(173, 151, 151);" data-bind="text: startDate.displayFullDate()"></div>
