--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventSummary.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventSummary.cshtml
@@ -1,10 +1,10 @@
 ﻿<div id="lobbyEventSummary">
-	<div class="title-header">Nadchodzące wydarzenia:</div>
+	<div class="title-header">/Nadchodzące wydarzenia/</div>
 	<div style="overflow: hidden;" data-bind="foreach: publicEvents">
 		<div class="event-block-container">
 			<span style="display: none;" class="hidden-event-id" data-bind="text: id"></span>
 			<div class="event-block" data-bind="click: function () { $root.showEventDetailsOnEventBlockClick($element) }">
-				<div data-bind="style: { color: kind.headerColor, background: 'rgb(130,130,130)', border: '1px solid rgb(221, 221, 221)', padding: '10px', marginBottom: '10px' }">
+				<div data-bind="style: { color: kind.headerColor, background: 'rgb(184, 168, 137)', border: '1px solid rgb(223, 209, 192)', width: '50%', boxShadow: 'inset 2px 2px 10px -1px rgb(143, 125, 107)', padding: '10px', marginBottom: '10px' }">
 					<span data-bind="text: kind.name"></span>
 				</div>
 				<div class="event-block-content">
