--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -18,7 +18,7 @@
    }
    else
    {
-				<div style="text-align: right; color: rgb(182, 182, 182);">
+				<div style="text-align: right; color: rgb(182, 182, 182);position:relative;top:30px;">
 					<span class="loggedIn-nickname">@User.Identity.Name</span>
 					@using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
 	 {
