--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_EventInfo.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_EventInfo.cshtml
@@ -36,7 +36,8 @@
 	<span>dodane przez:</span><span data-bind="text: ' ' + addedBy"></span>
 	</div>
 		<div style="float: right; margin-right: 10px;">
-			<div class="link details-delete-event-link" data-bind="if: $root.userName.toUpperCase() == addedBy.toUpperCase(), click: function () { $root.prepareDeleteEventDetailsPageOnDeleteLinkClick(id, startDate.year, startDate.month, startDate.day) }"><span>usuń</span></div>
+			<div style="display: inline-block;" class="link details-edit-event-link" data-bind="if: $root.userName.toUpperCase() == addedBy.toUpperCase(), click: function () { $root.editEventDetailsPageOnEditLinkClick( id, startDate.year, startDate.month, startDate.day ) }"><span>edytuj</span></div>
+			<div style="display: inline-block; padding-left: 10px;" class="link details-delete-event-link" data-bind="if: $root.userName.toUpperCase() == addedBy.toUpperCase(), click: function () { $root.prepareDeleteEventDetailsPageOnDeleteLinkClick( id, startDate.year, startDate.month, startDate.day ) }"><span>usuń</span></div>
 		</div>
 	</div>
 </div>
